Made changes to UI - carousal, modal

--- a/Dashboard/views/partials/cards.ejs
+++ b/Dashboard/views/partials/cards.ejs
@@ -1,5 +1,5 @@
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
+      <ol class="carousel-indicators" style="margin-bottom: 0px;">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" style="margin: 5px;"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1" style="margin: 5px;"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2" style="margin: 5px;"></li>
@@ -21,7 +21,7 @@
                       <div class="card-skill"><i></i><b>Skill :-</b> Web Designer</div>
                       <div class="card-proposal"><i></i><b>Proposals :-</b> 12</div>
                       </p>
-                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'">Read More</button>
+                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
                     </div>
                   </div>
                 </li>
@@ -37,7 +37,7 @@
                       <div class="card-skill"><i></i><b>Skill :-</b> Web Designer</div>
                       <div class="card-proposal"><i></i><b>Proposals :-</b> 12</div>
                       </p>
-                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'">Read More</button>
+                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
                     </div>
                   </div>
                 </li>
@@ -53,7 +53,7 @@
                       <div class="card-skill"><i></i><b>Skill :-</b> Web Designer</div>
                       <div class="card-proposal"><i></i><b>Proposals :-</b> 12</div>
                       </p>
-                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'">Read More</button>
+                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
                     </div>
                   </div>
                 </li>
@@ -75,7 +75,7 @@
                       <div class="card-skill"><i></i><b>Skill :-</b> Web Designer</div>
                       <div class="card-proposal"><i></i><b>Proposals :-</b> 12</div>
                       </p>
-                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'">Read More</button>
+                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
                     </div>
                   </div>
                 </li>
@@ -91,7 +91,7 @@
                       <div class="card-skill"><i></i><b>Skill :-</b> Web Designer</div>
                       <div class="card-proposal"><i></i><b>Proposals :-</b> 12</div>
                       </p>
-                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'">Read More</button>
+                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
                     </div>
                   </div>
                 </li>
@@ -107,7 +107,7 @@
                       <div class="card-skill"><i></i><b>Skill :-</b> Web Designer</div>
                       <div class="card-proposal"><i></i><b>Proposals :-</b> 12</div>
                       </p>
-                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'">Read More</button>
+                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
                     </div>
                   </div>
                 </li>
@@ -130,7 +130,7 @@
                       <div class="card-skill"><i></i><b>Skill :-</b> Web Designer</div>
                       <div class="card-proposal"><i></i><b>Proposals :-</b> 12</div>
                       </p>
-                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'">Read More</button>
+                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
                     </div>
                   </div>
                 </li>
@@ -146,7 +146,7 @@
                       <div class="card-skill"><i></i><b>Skill :-</b> Web Designer</div>
                       <div class="card-proposal"><i></i><b>Proposals :-</b> 12</div>
                       </p>
-                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'">Read More</button>
+                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
                     </div>
                   </div>
                 </li>
@@ -162,18 +162,18 @@
                       <div class="card-skill"><i></i><b>Skill :-</b> Web Designer</div>
                       <div class="card-proposal"><i></i><b>Proposals :-</b> 12</div>
                       </p>
-                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'">Read More</button>
+                      <button class="btn card_btn" onclick="document.getElementById('id01').style.display='block'" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
                     </div>
                   </div>
                 </li>
             </ul>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" style="width: 7%;">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next" style="width: 7%;">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
