--- a/Dashboard/views/partials/modal.ejs
+++ b/Dashboard/views/partials/modal.ejs
@@ -16,8 +16,9 @@
                               </div>
                               <footer class="w3-container">
                                 <div class="modal-footer">
-                                <button type="button" class="w3-button btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="button" class="w3-button btn btn-primary">Save changes</button>
+                                <button type="button" class="w3-button btn btn-primary" style="width:auto;">Draft Proposal</button>
+                                <button type="button" class="w3-button btn btn-warning" data-dismiss="modal" style="width:auto;">Close</button>
+
                                 </div>
                               </footer>
                             </div>
