--- a/Dashboard/views/partials/modal.ejs
+++ b/Dashboard/views/partials/modal.ejs
@@ -1,23 +1,22 @@
                         <div id="id01" class="w3-modal">
                             <div class="w3-modal-content">
                               <header class="w3-container"> 
-                                <span onclick="document.getElementById('id01').style.display='none'" 
-                                class="w3-button w3-display-topright">&times;</span>
-                                <h2 style="color: black;">Project Name 1</h2>
+                                <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
+                                <h3 style="color: black;" id="modal-name"></h3>
                               </header>
-                              <div class="w3-container">
-                                  <p class="modal-text">Description of Project:
-                                  <span>Demo of pixel perfect pure CSS simple responsive card grid layout</span>
-                                  <div class="modal-budget"><i></i><b>Budget :-</b> 10K - 20K</div>
-                                  <div class="modal-expect"><i></i><b>Expected By :-</b> 18th Feb, 2020</div>
-                                  <div class="modal-skill"><i></i><b>Skill :-</b> Web Designer</div>
-                                  <div class="modal-proposal"><i></i><b>Proposals :-</b> 12</div>
+                              <div class="w3-container" style="border: 3px solid blue; margin:0 10px 0 10px; padding-top:10px; font-size: 16px;">
+                                  <p class="modal-text"><b>Description of Project:</b>
+                                  <span id="modal-des"></span>
+                                  <div class="modal-budget" id="modal-budget"><i></i><b>Budget :- </b></div>
+                                  <div class="modal-expect" id="modal-expect"><i></i><b>Expected By :- </b></div>
+                                  <div class="modal-skill" id="modal-skill"><i></i><b>Skill :- </b></div>
+                                  <div class="modal-proposal"id="modal-proposal" ><i></i><b>Proposals :- </b></div>
                                   </p>
                               </div>
                               <footer class="w3-container">
                                 <div class="modal-footer">
                                 <button type="button" class="w3-button btn btn-primary" style="width:auto;">Draft Proposal</button>
-                                <button type="button" class="w3-button btn btn-warning" data-dismiss="modal" style="width:auto;">Close</button>
+                                <button type="button" class="w3-button btn btn-warning" onclick="document.getElementById('id01').style.display='none'" style="width:auto;">Close</button>
 
                                 </div>
                               </footer>
