sending card data to modal problem solved

--- a/Dashboard/views/partials/modal.ejs
+++ b/Dashboard/views/partials/modal.ejs
@@ -6,11 +6,11 @@
                               </header>
                               <div class="w3-container" style="border: 3px solid blue; margin:0 10px 0 10px; padding-top:10px; font-size: 16px;">
                                   <p class="modal-text"><b>Description of Project:</b>
-                                  <span id="modal-des"></span>
-                                  <div class="modal-budget" id="modal-budget"><i></i><b>Budget :- </b></div>
-                                  <div class="modal-expect" id="modal-expect"><i></i><b>Expected By :- </b></div>
-                                  <div class="modal-skill" id="modal-skill"><i></i><b>Skill :- </b></div>
-                                  <div class="modal-proposal"id="modal-proposal" ><i></i><b>Proposals :- </b></div>
+                                  <span id="modal-desc"></span>
+                                  <div class="modal-budget" id="modal-budget"></b></div>
+                                  <div class="modal-expect" id="modal-expect"></div>
+                                  <div class="modal-skill" id="modal-skill"></b></div>
+                                  <div class="modal-proposal"id="modal-proposal" ></b></div>
                                   </p>
                               </div>
                               <footer class="w3-container">
