--- a/Dashboard/views/partials/cards2.ejs
+++ b/Dashboard/views/partials/cards2.ejs
@@ -1,11 +1,3 @@
-<!-- <script type="text/javascript">
-
-var data = <%= JSON.strigify(projects)%> 
-
-
-</script> -->
-
-
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators" style="margin-bottom: 0px;">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active" style="margin: 5px;"></li>
@@ -21,20 +13,21 @@ var data = <%= JSON.strigify(projects)%>
           <ul class="cards">
             <% projects.forEach(function(project) { %>
                 
-              <li class="cards_item">
+              <script></script>
+
+              <li class="cards_item" id="<%= project.id %>">
                 <div class="card">
                   <div class="card_image"><img src="<%= project.img %>"></div>
                   <div class="card_content">
                     <h2 class="card_title"><%= project.name %></h2>
                     <p class="card_text">Description of Project:
                     <span><%= project.description %> </span>
-                    <div class="card-budget"><i></i><b>Budget :- </b><%= project.budget %></div>
+                    <div class="card-budget"><i></i><b>Budget :- </b>Rs. <%= project.budget %></div>
                     <div class="card-expect"><i></i><b>Expected By :- </b><%= project.date %></div>
                     <div class="card-skill"><i></i><b>Skill :- </b><%= project.skill %></div>
                     <div class="card-proposal"><i></i><b>Proposals :- </b><%= project.proposals %></div>
                     </p>
-                    <script></script>
-                  <button class="btn card_btn" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
+                  <button class="btn card_btn" onclick= "dataModel(this)" data-pid="<%= project.id %>" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
                   </div>
                 </div>
               </li>
@@ -46,26 +39,30 @@ var data = <%= JSON.strigify(projects)%>
       <!-- Frame of next three cards -->
       <div class="carousel-item ">
           <ul class="cards">
+
+
             <% projects.forEach(function(project) { %>
                 
-                <li class="cards_item">
+                <li class="cards_item" id="<%= project.id %>" >
                   <div class="card">
                     <div class="card_image"><img src="<%= project.img %>"></div>
                     <div class="card_content">
                       <h2 class="card_title"><%= project.name %></h2>
                       <p class="card_text">Description of Project:
                       <span><%= project.description %> </span>
-                      <div class="card-budget"><i></i><b>Budget :- </b><%= project.budget %></div>
+                      <div class="card-budget"><i></i><b>Budget :- </b>Rs. <%= project.budget %></div>
                       <div class="card-expect"><i></i><b>Expected By :- </b><%= project.date %></div>
                       <div class="card-skill"><i></i><b>Skill :- </b><%= project.skill %></div>
                       <div class="card-proposal"><i></i><b>Proposals :- </b><%= project.proposals %></div>
                       </p>
-                      <button class="btn card_btn" onclick="dataModel(project)" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
+                      <button class="btn card_btn" onclick= "dataModel(this)" data-pid="<%= project.id %>" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
                     </div>
                   </div>
                 </li>
                 
             <% }); %>
+
+
           </ul>
       </div>
 
@@ -74,19 +71,19 @@ var data = <%= JSON.strigify(projects)%>
         <ul class="cards">
             <% projects.forEach(function(project) { %>
                 
-                <li class="cards_item">
+                <li class="cards_item" >
                   <div class="card">
                     <div class="card_image"><img src="<%= project.img %>"></div>
                     <div class="card_content">
                       <h2 class="card_title"><%= project.name %></h2>
                       <p class="card_text">Description of Project:
                       <span><%= project.description %> </span>
-                      <div class="card-budget"><i></i><b>Budget :- </b><%= project.budget %></div>
+                      <div class="card-budget"><i></i><b>Budget :- </b>Rs. <%= project.budget %></div>
                       <div class="card-expect"><i></i><b>Expected By :- </b><%= project.date %></div>
                       <div class="card-skill"><i></i><b>Skill :- </b><%= project.skill %></div>
                       <div class="card-proposal"><i></i><b>Proposals :- </b><%= project.proposals %></div>
                       </p>
-                      <button class="btn card_btn" onclick="dataModel(project)" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
+                      <button class="btn card_btn" onclick="dataModel(this)" data-pid="<%= project.id %>" style="width:50%;display: block; margin: auto; border: 1px solid grey;">Read More</button>
                     </div>
                   </div>
                 </li>
@@ -107,18 +104,31 @@ var data = <%= JSON.strigify(projects)%>
 
 <script>
 
-function dataModel(project) {
+function dataModel(pr) {
 
-  var data = { ...project};
+  // var data = { ...project};
 
-  console.log(data);
+  console.log(pr);
+  // console.log(typeof(cproject));
+  // console.log(cproject);
+  // console.log(Array.isArray(cproject));
+  console.log(pr.getAttribute("data-pid"));
 
-  document.getElementById('modal-name').innerHTML = data.name;
-  document.getElementById('modal-desc').innerHTML = data.description;
-  document.getElementById('modal-skill').innerHTML = data.skill;
-  document.getElementById('modal-proposal').innerHTML = data.proposal;
-  document.getElementById('modal-budget').innerHTML = data.budget;
-  document.getElementById('modal-expect').innerHTML = data.expect;
+  let pid = pr.getAttribute("data-pid");
+
+  let pobj = jarray.find(x => x.id == pid);
+  if(pobj) {
+
+    document.getElementById('modal-name').innerHTML = pobj.name;
+    document.getElementById('modal-desc').innerHTML = pobj.description;
+    document.getElementById('modal-skill').innerHTML = "<b>Skill :- </b>"+pobj.skill;
+    document.getElementById('modal-proposal').innerHTML = "<b>Proposals :- </b>"+pobj.proposals;
+    document.getElementById('modal-budget').innerHTML = "<b>Budget:- </b>"+ "Rs. " +pobj.budget;
+    document.getElementById('modal-expect').innerHTML = "<b>Expected By :- </b>"+pobj.date;
+  }
+  else {
+    console.log("Card-Error");
+  }
 
   document.getElementById('id01').style.display='block';
 
